--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XMR Dashboard • Safe. Secure. Untraceable.</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="js/chart.min.js"></script>
     <style>
         body { font-family: Arial, sans-serif; background: #000; color: #fff; margin: 0; padding: 20px; line-height: 1.5; }
         .container { max-width: 1400px; margin: auto; background: #000; padding: 20px; }
@@ -230,4 +230,5 @@
         fetchXMRData();
     </script>
 </body>
+
 </html>
