--- a/index.html
+++ b/index.html
@@ -45,6 +45,22 @@
     </style>
 </head>
 <body>
+    <!-- Privacy Warning -->
+    <div style="background: #2a1a00; border-left: 4px solid #ff8c00; padding: 15px; margin: 20px; border-radius: 8px; color: #fff;">
+        <strong style="color: #ff8c00;">⚠️ Privacy Notice:</strong> 
+        This site currently makes direct API calls to CoinGecko for price data. 
+        Your IP address may be visible to their servers.
+        <br><br>
+        <strong style="color: #ff8c00;">For maximum privacy:</strong>
+        <ul style="margin: 10px 0; padding-left: 20px;">
+            <li>Use Tor Browser when accessing this site</li>
+            <li>Use a VPN to hide your real IP</li>
+        </ul>
+        <em style="color: #aaa; font-size: 0.9em;">
+            🔧 Working on implementing a privacy-respecting proxy server. 
+            This site is open source and being actively improved!
+        </em>
+    </div>
     <!-- Splash screen -->
     <div id="splash">
         <div class="splash-text">real privacy</div>
@@ -232,3 +248,4 @@
 </body>
 
 </html>
+
