--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
 
         <div class="chart-section">
             <div class="controls">
-                <button class="active" onclick="updateChart('1')">1h</button>
-                <button onclick="updateChart('1d')">1d</button>
-                <button onclick="updateChart('7')">1w</button>
-                <button onclick="updateChart('30')">1m</button>
-                <button onclick="updateChart('365')">1y</button>
-                <button onclick="updateChart('max')">all time</button>
+                <button class="active" onclick="updateChart('1')">1d</button>
+<button onclick="updateChart('7')">1w</button>
+<button onclick="updateChart('30')">1m</button>
+<button onclick="updateChart('90')">3m</button>
+<button onclick="updateChart('365')">1y</button>
+<button onclick="updateChart('max')">all time</button>>
             </div>
             <canvas id="xmrChart"></canvas>
         </div>
@@ -248,4 +248,5 @@
 </body>
 
 </html>
+
 
