--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <button onclick="updateChart('30')">1m</button>
 <button onclick="updateChart('90')">3m</button>
 <button onclick="updateChart('365')">1y</button>
-<button onclick="updateChart('max')">all time</button>>
+<button onclick="updateChart('max')">all time</button>
             </div>
             <canvas id="xmrChart"></canvas>
         </div>
@@ -248,5 +248,6 @@
 </body>
 
 </html>
+
 
 
